[package]
name = "x509-lint"
version = "0.1.0"
description = "X.509 linter (RFC 5280 certificates and CRLs)"
license = "MIT OR Apache-2.0"
keywords = ["X509", "Certificate", "lint"]
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
homepage = "https://github.com/chifflier/x509-lint"
repository = "https://github.com/chifflier/x509-lint.git"
categories = ["parser-implementations", "cryptography"]
readme = "README.md"
edition = "2021"
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["cargo", "derive"] }
colored = "2.0"
x509_lint = { path = "./x509_lint" }
x509-parser = { version = "0.16.0" }

[patch.crates-io]
x509-parser = { git = "https://github.com/rusticata/x509-parser", branch = "x509-parser-visitor-v0.1" }
