[package]
name = "x509lint"
version = "0.2.0"
description = "X.509 linter (RFC 5280 certificates and CRLs)"
license = "MIT OR Apache-2.0"
keywords = ["X509", "Certificate", "lint"]
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
homepage = "https://github.com/chifflier/x509-lint"
repository = "https://github.com/chifflier/x509-lint.git"
categories = ["parser-implementations", "cryptography"]
readme = "README.md"
edition = "2021"
rust-version = "1.74"

include = [
  "CHANGELOG.md",
  "LICENSE-*",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["cargo", "derive"] }
colored = "2.0"
x509_lint = { version = "0.2", path = "./x509_lint" }

